--- a/pom.xml
+++ b/pom.xml
@@ -103,5 +103,22 @@
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
-
+<build>
+    <plugins>
+        <plugin>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-maven-plugin</artifactId>
+            <executions>
+                <execution>
+                    <goals>
+                        <goal>repackage</goal>
+                    </goals>
+                    <configuration>
+                        <mainClass>at.bitmedia.schoolreader.version1.Version1Application</mainClass>
+                    </configuration>
+                </execution>
+            </executions>
+        </plugin>
+    </plugins>
+</build>
 </project>
